# qt-widget-plugins-example

./: .clang-format  .clang-tidy  .clazy  .cmake-format.json  .gitignore  CMakeLists.txt  readme.md
app/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  main_window.cpp  main_window.hpp  plugin_factory.cpp  plugin_factory.hpp  plugin_interface.hpp  plugin_loader.cpp  plugin_loader.hpp
plugins/: CMakeLists.txt
plugins/plugin1/: CMakeLists.txt  plugin1.cpp  plugin1.hpp  plugin1_loader.cpp  plugin1_loader.hpp  plugin1_widget.cpp  plugin1_widget.hpp
plugins/plugin2/: CMakeLists.txt  plugin2.cpp  plugin2.hpp  plugin2_loader.cpp  plugin2_loader.hpp  plugin2_widget.cpp  plugin2_widget.hpp
